[package]
name = "rtend"
version = "0.1.0"
description = "simple cli note taking program"
authors = ["rudo2204 <rudo2204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
directories = "2.0"
rusqlite = {version = "0.20", features = ["bundled"]}
time = "0.1"
atty = "0.2"
