[package]
name = "rtend"
version = "0.1.4"
description = "simple cli note taking program"
authors = ["rudo2204 <rudo2204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rtend"
path = "src/rtend/lib.rs"

[[bin]]
name = "rtend"
path = "src/rtend.rs"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
directories = "2.0"
rusqlite = {version = "0.22", features = ["bundled"]}
time = "0.1"
atty = "0.2"
textwrap = "0.11"
scrawl = "1.1"
regex = "1"

[target.'cfg(unix)'.dependencies]
skim = "0.8"
