[package]
name = "rtend"
version = "0.2.0"
description = "simple cli note taking program"
authors = ["rudo2204 <rudo2204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rtend"
path = "src/rtend/lib.rs"

[[bin]]
name = "rtend"
path = "src/rtend.rs"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
directories = "3.0"
rusqlite = { git = "https://github.com/rusqlite/rusqlite/", rev = "157256a", features = ["bundled", "time"]}
time = "0.2"
atty = "0.2"
textwrap = "0.12"
scrawl = "1.1"
regex = "1"
comfy-table = "1.0.0"
term_size = "1.0.0-beta1"

[target.'cfg(unix)'.dependencies]
skim = "0.8"
